# AI_TTS_PROJECT

./: .gitattributes  .gitignore  README.md
FastSpeech2/: LOCAL_CLI.md  evaluate.py  local_cli.py  prepare_align.py  preprocess.py  pyproject.toml  requirements.txt  synthesize.py  train.py
FastSpeech2/configs/templates/en_ljspeech/: model.yaml  preprocess.yaml  preprocess.yaml.bak  train.yaml
FastSpeech2/configs/templates/vi_ljspeech/: model.yaml  preprocess.yaml.bak  train.yaml
FastSpeech2/scripts/: monitor_training.py
FastSpeech2/src/fastspeech2/audio/: __init__.py  audio_processing.py  stft.py
FastSpeech2/src/fastspeech2/cli/: local_cli.py
FastSpeech2/src/fastspeech2/inference/: synthesize.py
FastSpeech2/src/fastspeech2/models/: fastspeech2.py  loss.py  modules.py  optimizer.py
FastSpeech2/src/fastspeech2/models/hifigan/: models.py
FastSpeech2/src/fastspeech2/models/transformer/: Layers.py  Models.py  Modules.py  SubLayers.py
FastSpeech2/src/fastspeech2/text/: __init__.py  cleaners.py  cmudict.py  numbers.py  numbers_vi.py  symbols.py  vietnamese_phonemes.py
FastSpeech2/src/fastspeech2/training/: evaluate.py  train.py
FastSpeech2/src/fastspeech2/utils/: model.py  tools.py
FastSpeech2/workspace/preprocessed/: en_ljspeech.txt  vi_ljspeech.txt
FastSpeech2_runs/checkpoints/: en_ljspeech.txt  vi_ljspeech.txt
coqui-ai-TTS/TTS/: __init__.py  model.py
coqui-ai-TTS/TTS/config/: __init__.py  (+1 more)
web/: run_web.sh
web/be/: app.py  requirements.txt
web/fe/: app.js  app.js.bak_slider_payload  index.html  style.css
web/runtime/: fastspeech2_python.sh
(+65 files in other folders)
